fix(qor-header): Fix scrollbar display bug

--- a/admin/views/assets/stylesheets/scss/app/_actions.scss
+++ b/admin/views/assets/stylesheets/scss/app/_actions.scss
@@ -4,7 +4,7 @@
 .qor-actions {
   float: left;
   min-height: 32px;
-  margin: 4px 8px 4px 0;
+  margin-right: 8px;
   @include clearfix();
 
   &:first-child {
