--- a/admin/views/assets/stylesheets/scss/app/_layout.scss
+++ b/admin/views/assets/stylesheets/scss/app/_layout.scss
@@ -3,6 +3,42 @@
 
   .mdl-layout__content{
     overflow: auto;
+    &.has-header{
+      margin-top: 48px;
+    }
+    &::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+    }
+    &::-webkit-scrollbar-button {
+      width: 0;
+      height: 0;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: #ccc;
+      border: 0 none #ffffff;
+      border-radius: 50px;
+    }
+    &::-webkit-scrollbar-thumb:hover {
+      background: #ccc;
+    }
+    &::-webkit-scrollbar-thumb:active {
+      background: #000000;
+    }
+    &::-webkit-scrollbar-track {
+      background: transparent;
+      border: 0 none #ffffff;
+      border-radius: 50px;
+    }
+    &::-webkit-scrollbar-track:hover {
+      background: #666666;
+    }
+    &::-webkit-scrollbar-track:active {
+      background: #333333;
+    }
+    &::-webkit-scrollbar-corner {
+      background: transparent;
+    }
   }
 
   .mdl-layout__header,.mdl-layout__tab-bar{
@@ -105,7 +141,9 @@
 
 .qor-page__header {
   position: fixed;
+  top: 64px;
   min-height: 40px;
+  height: 48px;
   margin-bottom: 24px;
   padding: 8px 24px 8px 26px;
   width: calc(100% - 240px);
@@ -114,15 +152,15 @@
   z-index: 999;
   @include shadow-2dp-bottom();
   @include clearfix();
+  .qor-search{
+    height: 48px;
+  }
   + .qor-page__body{
-    padding-top: 80px;
+    padding-top: 24px;
     .qor-table-container{
       margin-top: 0;
     }
   }
-}
-
-.qor-page__body {
 }
 
 .qor-page__footer {
@@ -139,6 +177,15 @@
   .mdl-layout__tab-bar{
     padding: 0;
   }
+}
+
+@media screen and (max-width: 1024px){
+  .qor-page__header {
+    width: 100%;
+    top: 56px;
+    display: block;
+  }
+
 }
 
 @media screen and (min-width: 1025px){
